<resources>
    <string name="app_name">DIY 760</string>
    <string name="logo">DIY 760 Logo</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_registered_register">Not registered yet? Register</string>
    <string name="first_name">First Name</string>
    <string name="register">Register</string>
    <string name="already_registered_login">Already Registered? Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="log_out">Log Out</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="build_your_dispute_letter">Build Your Dispute Letter!</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="apt">Apt</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>
    <string name="last_4_of_social">Last 4 of Social</string>
    <string name="select_birthdate">Select Birthdate</string>
    <string name="select_date">Select Date</string>
    <string name="please_select_the_items_you_would_nlike_to_include_in_your_letter">Please select the items you would like to include in your letter:</string>
    <string name="dispute_inaccurate_or_incorrect_names">Dispute inaccurate or incorrect names?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="inaccurate_name">Inaccurate Name</string>
    <string name="dispute_inaccurate_or_incorrect_addresses">Dispute inaccurate or incorrect addresses?</string>
    <string name="plus_button">+</string>
    <string name="dispute_inaccurate_or_incorrect_accounts">Dispute inaccurate or incorrect accounts?</string>
    <string name="account_name">Account Name</string>
    <string name="account_number">Account Number</string>
    <string name="dispute_inaccurate_or_incorrect_public_records">Dispute inaccurate or incorrect public records?</string>
    <string name="dispute_inaccurate_or_incorrect_inquiries">Dispute inaccurate or incorrect inquiries?</string>
    <string name="inquiry_name">Inquiry Name</string>
    <string name="record_name">Record Name</string>
    <string name="freeze_your_credit_report">Freeze your credit report?</string>
    <string name="stop_offers_in_the_mail">Stop offers in the mail?</string>
    <string name="are_you_including_additional_documents">Are you including additional documents?</string>
    <string name="generate_letter">Generate Letter</string>
    <string name="enter_name_of_document">Enter name of document</string>
    <string name="print_button">Print</string>
    <string name="save_button">Save</string>
    <string name="clear_button">Clear</string>
    <string name="first_text_field">First Text Field</string>
    <string name="second_text_field">Second Text Field</string>
    <string name="button">button</string>
    <string name="sagestream_dispute_letter">SageStream Dispute Letter</string>
    <string name="copy_of_your_credit_report">Do you want a Free copy of your credit report?</string>
    <string name="click_to_select_your_reason_for_disputing">Select Your Reason For Disputing</string>
    <string name="click_to_select_the_result_you_want">Click To Select The Result You Want</string>
    <string-array name="us_states">
        <item>AL</item> 
        <item>AK</item> 
        <item>AR</item> 
        <item>AZ</item> 
        <item>CA</item> 
        <item>CO</item> 
        <item>CT</item> 
        <item>DE</item> 
        <item>FL</item> 
        <item>GA</item> 
        <item>HI</item> 
        <item>IA</item> 
        <item>ID</item> 
        <item>IL</item> 
        <item>IN</item> 
        <item>KY</item> 
        <item>KS</item> 
        <item>LA</item> 
        <item>MA</item> 
        <item>MD</item> 
        <item>ME</item> 
        <item>MI</item> 
        <item>MN</item> 
        <item>MO</item> 
        <item>MS</item> 
        <item>MT</item> 
        <item>NC</item> 
        <item>ND</item> 
        <item>NE</item> 
        <item>NH</item> 
        <item>NJ</item> 
        <item>NM</item> 
        <item>NV</item> 
        <item>NY</item> 
        <item>OH</item> 
        <item>OK</item> 
        <item>OR</item> 
        <item>RI</item> 
        <item>PA</item> 
        <item>TN</item> 
        <item>UT</item> 
        <item>VA</item> 
        <item>VT</item> 
        <item>SC</item> 
        <item>SD</item> 
        <item>TX</item> 
        <item>WA</item> 
        <item>WI</item> 
        <item>WV</item> 
        <item>WY</item> 
    </string-array>
    <string name="experian_title">Experian</string>
    <string name="equifax_title">Equifax</string>
    <string name="transunion_title">TranUnion</string>
    <string name="sagestream_title">SageStream</string>
    <string name="corelogic_title">CoreLogic</string>
    <string name="innovis_title">Innovis</string>
    <string name="lexisnexis_title">LexisNexis</string>
    <string name="search">Search</string>
    <string name="corelogic_complete_letter">CoreLogic Complete Letter</string>
    <string name="corelogic_step_1_letter">CoreLogic Step 1 Letter</string>
    <string name="corelogic_step_2_letter">CoreLogic Step 2 Letter</string>
    <string name="equifax_complete_letter">Equifax Complete Letter</string>
    <string name="equifax_step_1_letter">Equifax Step 1 Letter</string>
    <string name="equifax_step_2_letter">Equifax Step 2 Letter</string>
    <string name="experian_complete_letter">Experian Complete Letter</string>
    <string name="experian_step_1_letter">Experian Step 1 Letter</string>
    <string name="experian_step_2_letter">Experian Step 2 Letter</string>
    <string name="innovis_complete_letter">Innovis Complete Letter</string>
    <string name="innovis_step_1_letter">Innovis Step 1 Letter</string>
    <string name="innovis_step_2_letter">Innovis Step 2 Letter</string>
    <string name="lexisnexis_complete_letter">LexisNexis Complete Letter</string>
    <string name="lexisnexis_step_1_letter">LexisNexis Step 1 Letter</string>
    <string name="lexisnexis_step_2_letter">LexisNexis Step 2 Letter</string>
    <string name="sagestream_complete_letter">SageStream Complete Letter</string>
    <string name="sagestream_step_1_letter">SageStream Step 1 Letter</string>
    <string name="sagestream_step_2_letter">SageStream Step 2 Letter</string>
    <string name="transunion_complete_letter">TransUnion Complete Letter</string>
    <string name="transunion_step_1_letter">TransUnion Step 1 Letter</string>
    <string name="transunion_step_2_letter">TransUnion Step 2 Letter</string>
    <string name="right_fragment_step_1_text">In Step 1, you\'re going to freeze and request copies of your reports from each of the three major bureaus and the four minor reporting agencies. \n\nEstimated Timeframe: 30 Days</string>
    <string name="right_fragment_step_1_button">Step 1 - Freeze and Request Reports</string>
    <string name="right_fragment_complete_step_1">Complete Step 1</string>
    <string name="right_fragment_complete_step_1_text">Step 1 Complete</string>
    <string name="right_fragment_step_1_description">Equifax, Experian, and TransUnion are the three Major Credit Bureaus that provide your credit report and scores to creditors.\n\nSageStream, CoreLogic, Innovis, and LexisNexis are data furnishers or reporting agencies that provide information that the credit bureaus use to build your credit profile.</string>
    <string name="right_fragment_step_2_text">In Step 2, you will dispute and remove inaccurate names, addresses, phone numbers, and employers from each of your major and minor credit reports. \n\nThis step will normally require 1 to 2 letters to achieve your goal. \n\nEstimated Timeframe: 30 Days - 60 Days</string>
    <string name="right_fragment_step_2_button">Step 2 - Update Personal Information</string>
    <string name="right_fragment_complete_step_2">Complete Step 2</string>
    <string name="right_fragment_complete_step_2_text">Step 2 Complete</string>
    <string name="right_fragment_step_2_description">In Step 2 , you will freeze your reports with each of the agencies and request your credit report from them. \n\nEstimated Timeframe: 30 Days</string>
    <string name="right_fragment_step_3_text">In Step 3, you will dispute and remove inaccurate accounts, inquiries, and public records. \n\nThis step will normally require 1 to 2 letters to achieve your goal. \n\nEstimated Timeframe: 30 Days - 60 Days</string>
    <string name="right_fragment_step_3_button">Step 3 - Dispute Inaccurate Items</string>
    <string name="right_fragment_complete_step_3">Complete Step 3</string>
    <string name="right_fragment_complete_step_3_text">Step 3 Complete</string>
    <string name="right_fragment_step_4_button">Step 4 - Second Round of Letters</string>
    <string name="remove_button">-</string>
    <string-array name="company_addresses">
        <item>Experian\nP.O. Box 4500\nAllen, TX 75013</item>
        <item>Equifax\nP.O. Box 740256\nAtlanta, GA 30374–0256</item>
        <item>TransUnion Consumer Solutions\nP.O. Box 2000\nChester, PA 19016–2000</item>
        <item>SageStream, LLC\nLexisNexis Risk Solutions Consumer Center\nP.O. Box 105108\nAtlanta, GA 30348–5108</item>
        <item>CoreLogic Credco\nP.O. Box 509124\nSan Diego, CA 92150</item>
        <item>Innovis Consumer Assistance\nPO Box 530086\nAtlanta, GA 30353–0086</item>
        <item>LexisNexis Risk Solutions Consumer Center\nP.O. Box 105108\nAtlanta, GA 30348–5108</item>
    </string-array>
    <string-array name="company_names">
        <item>Experian</item>
        <item>Equifax</item>
        <item>TranUnion</item>
        <item>SageStream</item>
        <item>CoreLogic</item>
        <item>Innovis</item>
        <item>LexisNexis</item>
        <item>Search</item>
    </string-array>
    <string-array name="section1_versions">
        <item>I got a credit report, but it has mistakes. I need your help to fix it right away, because some important rules say we should.</item>
        <item>I looked at my credit report, and I found some mistakes in it. Please help me fix these errors quickly because the Fair Credit Reporting Act says we need to do this.</item>
        <item>I recently reviewed my credit report and discovered inaccuracies. Please address these issues promptly, as the Fair Credit Reporting Act (FCRA) requires us to do so under Sections 611 and 623.</item>
        <item>I recently obtained and reviewed my credit report, finding several inaccuracies that need your immediate attention. Please rectify these issues in accordance with the Fair Credit Reporting Act (FCRA) Sections 611 and 623.</item>
        <item>Upon reviewing my recently obtained credit report, I have identified inaccuracies that necessitate prompt resolution. Please address these issues in compliance with Sections 611 and 623 of the Fair Credit Reporting Act (FCRA).</item>
        <item>I have acquired and scrutinized my credit report, revealing discrepancies that demand expeditious attention. Kindly rectify these inaccuracies in adherence to the Fair Credit Reporting Act (FCRA) Sections 611 and 623.</item>
        <item>In reference to my recently procured credit report, a thorough examination revealed inaccuracies that warrant immediate intervention. I kindly request that you address these discrepancies in accordance with the stipulations set forth in Sections 611 and 623 of the Fair Credit Reporting Act (FCRA).</item>
        <item>I am writing to you in regards to my credit report, which I recently obtained and reviewed. I have found inaccuracies that require your immediate attention, in accordance with the Fair Credit Reporting Act (FCRA) Sections 611 and 623.</item>
    </string-array>
</resources>