<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewExplanation1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/text_view_background"
        android:padding="10dp"
        android:text="@string/right_fragment_step_1_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button1"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/right_fragment_step_1_button" />

    <LinearLayout
        android:id="@+id/buttonAndTextContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/buttonColumn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button2"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/equifax_title" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button3"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/experian_title" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button4"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transunion_title" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button5"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sagestream_title" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button6"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/corelogic_title" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button7"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/innovis_title" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button8"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lexisnexis_title" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button9"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/right_fragment_complete_step_1" />

        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewExplanation2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/text_view_background"
            android:padding="10dp"
            android:text="@string/right_fragment_step_1_description" />

    </LinearLayout>

</LinearLayout>
