<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewExplanation3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text_view_background"
        android:padding="10dp"
        android:text="@string/right_fragment_step_2_text"
        android:visibility="gone"
        android:layout_marginTop="16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button10"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/right_fragment_step_2_button"
        android:visibility="gone"
        android:enabled="false" />

    <LinearLayout
        android:id="@+id/secondButtonAndTextContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/secondButtonColumn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button11"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/equifax_title" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button12"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/experian_title" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button13"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transunion_title" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button14"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sagestream_title" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button15"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/corelogic_title" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button16"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/innovis_title" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button17"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lexisnexis_title" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button18"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/right_fragment_complete_step_2" />

        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewExplanation4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/text_view_background"
            android:padding="10dp"
            android:text="@string/right_fragment_step_2_description"
            />
    </LinearLayout>

</LinearLayout>