<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/radioButtons2Label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="6"
            android:text="@string/dispute_inaccurate_or_incorrect_addresses" />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton2Yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:nextFocusDown="@+id/radioButton3Yes"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/radioButton2No"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no" />
        </RadioGroup>
    </TableRow>

    <TableLayout
        android:id="@+id/address_form_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <TableRow
            android:id="@+id/address_form_row1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/address_form"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/address"
                android:autofillHints="@string/address"
                android:inputType="textPostalAddress"/>

            <EditText
                android:id="@+id/apartment_form"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/apt"
                android:autofillHints="@string/apt"
                android:inputType="text"/>
        </TableRow>

        <TableRow
            android:id="@+id/address_form_row2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/city_form"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/city"
                android:autofillHints="@string/city"
                android:inputType="text"/>

            <EditText
                android:id="@+id/state_form"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/state"
                android:autofillHints="@string/state"
                android:inputType="text"/>

            <EditText
                android:id="@+id/zip_form"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/zip_code"
                android:autofillHints="@string/zip_code"
                android:inputType="number"/>

        </TableRow>

        <TableRow
            android:id="@+id/address_form_row3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/address_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4" />

            <Button
                android:id="@+id/address_add_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/plus_button"
                android:textColor="@color/white" />
        </TableRow>
    </TableLayout>

    <TableRow
        android:id="@+id/addressRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <Spinner
            android:id="@+id/addressDisputeSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/address_text_fields_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/address_first_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_text_field"
                android:autofillHints="@string/first_text_field"
                android:inputType="text"/>

            <EditText
                android:id="@+id/address_second_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/second_text_field"
                android:autofillHints=""
                android:inputType="text"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button" />

        </LinearLayout>

    </TableRow>

</TableLayout>