<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/radioButtons5Label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="6"
            android:text="@string/dispute_inaccurate_or_incorrect_public_records" />

        <RadioGroup
            android:id="@+id/radioGroup5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton5Yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:nextFocusDown="@+id/radioButton6Yes"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/radioButton5No"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no" />
        </RadioGroup>
    </TableRow>

    <TableLayout
        android:id="@+id/records_form_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <TableRow
            android:id="@+id/records_form_row1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/record_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/record_name"
                android:autofillHints="@string/record_name"
                android:inputType="text"/>

            <Button
                android:id="@+id/record_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/select_date"
                android:textColor="@color/white" />
        </TableRow>

        <TableRow
            android:id="@+id/records_form_row2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/records_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4" />

            <Button
                android:id="@+id/records_add_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/plus_button"
                android:textColor="@color/white" />
        </TableRow>
    </TableLayout>

    <TableRow
        android:id="@+id/recordsRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <Spinner
            android:id="@+id/recordsDisputeSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/records_text_fields_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <EditText
                android:id="@+id/records_first_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_text_field"
                android:autofillHints=""
                android:inputType="text" />

            <EditText
                android:id="@+id/records_second_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/second_text_field"
                android:autofillHints=""
                android:inputType="text" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button" />

        </LinearLayout>

    </TableRow>

</TableLayout>